<resources>

    <string name="app_name">Online clothing store</string>
    <string name="maintxt1">SMART SHOPPING</string>
    <string name="maintxt2">Next way of Shopping</string>
    <string name="mainMen">Mens Fashion</string>
    <string name="mainWomen">Women Fashion</string>
    <string name="mainKids">Kids Fashion</string>
    <string name="mainShoe">Shoes</string>
    <string name="mainWatch">Watches</string>
    <string name="mainGlass">Sunglasses</string>


    <!--    Menu-->
    <string name="mainHeader1">Classic Curves</string>
    <string name="mainHeader2">Life with Fashion</string>
    <string name="SideHome">Home</string>
    <string name="SideReq">Request</string>
    <string name="SideOrder">My Orders</string>
    <string name="SideCat">Categories</string>
    <string name="SideProf">My Profile</string>
    <string name="SideLogin">Login</string>
    <string name="SideLogOut">Logout</string>
    <string name="SideContact">ContactUS</string>
    <string name="SideReview">Review</string>


    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>

    <string name="ItemDet">SHOES</string>
    <string name="btnEdit">EDIT</string>
    <string name="btnCart">Add To Cart</string>
    <string name="btnBuy">Buy Now</string>

    <string name="btnAddphoto">Add Photo</string>
    <string name="btnTakephoto">Take Photo</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnRemove">REMOVE</string>
    <string name="btnAddItem">ADD ITEM</string>
    <string name="btnAddCat">ADD CATEGORY</string>
    <string name="EditCat">EDIT CATEGORY</string>
    <string name="AddCat">ADD CATEGORY</string>
    <string name="AddName">ADD ITEM</string>
    <string name="select">SELECT CATEGORY</string>
    <string name="editItem">EDIT ITEM</string>
    <string name="select2"> Shoes</string>



  
    <string name="logtitle1">Welcome back !</string>
    <string name="logtitle2">Log in to your existing account</string>
    <string name="fgt_password">Forget Password ?</string>
    <string name="noacc">Don\'t have an account ?</string>
    <string name="signup">Sign Up</string>
    <string name="regtitle1">Let\'s Get Started !</string>
    <string name="regtitle2">Create an account to get all features</string>
    <string name="haveacc">Already have an account ?</string>
    <string name="login">Log In</string>
    <string name="namelbl">Full Name</string>
    <string name="emaillbl">Email</string>
    <string name="phonelbl">Phone</string>
    <string name="addresslbl">Address</string>
    <string name="passwordlbl">Password</string>
    <string name="usernamelbl">Username</string>
    <string name="typelbl">Type</string>
    <string name="edit_profilebtn">Edit Profile</string>
    <string name="delete_profilebtn">Delete Profile</string>
    <string name="uploadbtn1">Take</string>
    <string name="uploadbtn2">Upload</string>
    <string name="updatebtn">Update</string>
    <string name="defaultbtn">Default</string>
    <string name="set_as_defaultbtn">Set as Default</string>
    <string name="payeditbtn">Edit</string>
    <string name="payremovebtn">Remove</string>
    <string name="payadd_newbtn">Add New</string>
    <string name="pay_nowbtn">Pay Now</string>
</resources>



