<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lg1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_header"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/logtitle1"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/logtitle2"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/edit_text_1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_edit_text_blue_bdr"
            android:drawableLeft="@drawable/operson"
            android:hint="@string/usernamelbl"
            android:inputType="text"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/edit_text_2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_edit_text_blue_bdr"
            android:drawableLeft="@drawable/olock"
            android:hint="@string/passwordlbl"
            android:inputType="numberPassword"
            android:paddingLeft="20dp" />

        <TextView
            android:id="@+id/forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/fgt_password"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noacc"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/blue" />
    </LinearLayout>

</RelativeLayout>