<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user_and_payment_management.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="53dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/backarrow" />

            <ImageView
                android:layout_width="53dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-2dp"
                android:padding="15dp"
                android:src="@drawable/search" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@color/orange"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/prof2"
                android:layout_marginLeft="-80dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="85dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="11dp"
                android:layout_marginTop="-103dp"
                android:layout_marginLeft="90dp">

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_bttn"
                    android:text="@string/uploadbtn1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/bcam"
                    android:paddingLeft="16dp"/>

                <TextView
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/bg_bttn"
                    android:text="@string/uploadbtn2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/bfile"
                    android:paddingLeft="16dp"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namelbl"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/operson"
                    android:drawablePadding="15dp"
                    android:textColor="@color/black"
                    android:text="Bruce Wayne"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emaillbl"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/oemail"
                    android:drawablePadding="15dp"
                    android:textColor="@color/black"
                    android:text="Brucewayne@waynecorp.com"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phonelbl"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ophone"
                    android:drawablePadding="15dp"
                    android:textColor="@color/black"
                    android:text="+94 76 552 3003"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addresslbl"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ohome"
                    android:drawablePadding="15dp"
                    android:textColor="@color/black"
                    android:text="No.25,Wayne Manor,Gothem"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernamelbl"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/operson"
                    android:drawablePadding="15dp"
                    android:textColor="@color/black"
                    android:text="brucew99"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/saveupdate"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/updatebtn"
                android:textStyle="bold"
                app:backgroundTint="#ffa31a" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>